--- a/stylesheet.css
+++ b/stylesheet.css
@@ -20,7 +20,6 @@ body{
 #titleBar{
 	background-color: rgb(160, 210, 255);
 	border-bottom: 0.1em solid rgb(80, 80, 80);
-	display: block;
 	float: top;
 }
 
@@ -35,7 +34,7 @@ body{
 }
 
 #navbar{
-	height: 93.3%;
+	height: 200%;
 	width: 20%;
 	max-width: 15em;
 	float: left;
@@ -47,18 +46,14 @@ h1{
 }
 
 ul{
-	list-style-type: none;
-	width: 20%;
-	max-width: 15em;
 	background-color: rgb(190, 190, 190);
 	border-right: 0.0em solid rgb(80, 80, 80);
-	position: fixed;
+	position: sticky;
+	top: 0;
 	overflow: auto;
 }
 
 li a {
-	display: block;
-	text-align: center;
 	text-decoration: none;
 	color: black;
 	font-size: 1.1em;
@@ -66,6 +61,7 @@ li a {
 }
 
 li {
+	text-align: center;
 	border-right: 0.1em solid rgb(80, 80, 80);
 	border-bottom: 0.1em solid rgb(80, 80, 80);
 	padding: 2.5% 0 2.5% 0;
