Added content to the Compiler Implementation in Java project page
Added a description to the Compiler Implementation in Java project page.
Also provided links to the GitHub Repo, a pdf of the book, and the tools that I used for the project.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -54,15 +54,15 @@ h2{
 	text-align: center;
 }
 
-#project:link{
+#niceln:link{
 	color: blue;
 }
 
-#project:visited{
+#niceln:visited{
 	color: blue;
 }
 
-#project:hover {
+#niceln:hover {
 	text-decoration: underline;
 }
 
