--- a/stylesheet.css
+++ b/stylesheet.css
@@ -50,6 +50,7 @@ tab{
 
 #content{
 	padding: 0% 2% 0% 2%;
+	height: 100%;
 	width: 75%;
 	float: right;
 }
@@ -61,6 +62,18 @@ tab{
 	width: 20%;
 	float: left;
 	border-right: 0.1em solid rgb(80, 80, 80);
+}
+
+#infobar{
+	float: right;
+	border-left: 0.1em solid rgb(80, 80, 80);
+	height: 100%;
+	width: 15%;
+}
+
+#pp{
+	width: 100%;
+	padding: 9% 0 0 9%;
 }
 
 h1{
